diss: meeting with Thomas, mainly structural tweaks

--- a/appendix1.tex
+++ b/appendix1.tex
@@ -10,7 +10,7 @@ This section reproduces the work
 published as technical report no.~69 at the Department of Statistics of Ludwig-Maximilians-University Munich (LMU)
 \parencite{Walter2009b}. This technical report is a substantially extended version of a contribution to
 ``Statistical Modelling and Regression Structures: Festschrift in Honour of Ludwig Fahrmeir'' \parencite{Walter2010a}.
-As such, it is reproduced here verbatim, except for some minor rewording,
+As such, it is reproduced here almost verbatim, except for some minor rewording,
 and the addition of some comments and footnotes linking this work to other parts of this thesis.
 Furthermore, the notation was changed slightly towards the one introduced in Section~\ref{sec:regularconjugates}
 (most importantly, denoting posterior parameters with upper index ${}\un$ instead of ${}^{(1)}$,
@@ -1276,7 +1276,14 @@ The authors are very grateful to Erik Quaeghebeur and Frank Coolen for intensive
 inference, and to Thomas Kneib for help at several stages of writing this paper.
 
 
-\section{Linear Regression Analysis under Sets of Conjugate Priors***}
+\section{***Linear Regression Analysis under Sets of Conjugate Priors}
 
 ***short summary of ISIPTA'07 paper??***
+
+
+\section{***boatshape stuff***}
+
+
+march 2013 notes (technical results)
+
 
