--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -1,4 +1,4 @@
-\chapter{Generalised Bayesian Inference}
+\chapter{Imprecise Probability as Foundation of Generalised Bayesian Inference}
 \label{cha:gbi}
 
 %\begin{itemize}
@@ -610,7 +610,7 @@ how models along this approach can be modified to cater for `bonus precision'
 if prior and data coincide especially well.****
 
 
-\subsection{***Related Concepts}
+\subsection{***A Brief Glance on Related Concepts}
 \label{sec:ip-related}
 
 %****as separate section 2.3?****
@@ -651,6 +651,11 @@ If $m(\emptyset) = 0$, then belief functions coincide with $\infty$-monotone cap
 which are a special case of lower previsions.
 Only if $m(\emptyset) > 0$, which does not seem a reasonable choice in our view anyhow,
 the set of corresponding distributions $\mathcal{M}$ is empty.***
+
+***note on IP can be frequentist / non-Bayesian (similarities to Weichselberger?),
+see \ref[\S 5]{itip-statinf}***
+
+***short description of NPI here? as \emph{inference} approach!
 
 
 
