--- a/intro.tex
+++ b/intro.tex
@@ -22,6 +22,9 @@
 
 \subsection{Sources}
 
+\textbf{***less details***}
+
+
 Sec.~\ref{sec:stat-inference}: parts of \textcite[\S\S 1.1, 1.2, 1.5]{itip-statinf}
 
 Sec.~\ref{sec:bayes-inference} uses parts of \textcite[\S\S 1.3, 1.4, 4.1]{itip-statinf},
@@ -32,37 +35,38 @@ except Sec.~\ref{sec:diri-multi}, which is based on \textcite{Walter2012b}.
 %Sec.~\ref{sec:norm-norm}: parts of \cite{itip-statinf}
 
 
-Sec.~\ref{sec:commoncause} is based on parts of \textcite{Troffaes2013a},
-where in particular Sec.~\ref{sec:basic-param-model} and Sec.~\ref{sec:alpha-factor-model}
-have been written primarily by Matthias Troffaes.
-However, Section~\ref{sec:commoncause-motivation} was newly written for this thesis.
+Sec.~\ref{sec:commoncause} is based on %parts of
+\textcite{Troffaes2013a},
+%where in particular Sec.~\ref{sec:basic-param-model} and Sec.~\ref{sec:alpha-factor-model}
+%have been written primarily by Matthias Troffaes.
+except Section~\ref{sec:commoncause-motivation}, which was newly written for this thesis.
 
 %Sec.~\ref{sec:alpha-factor-prior}: parts of \cite{Troffaes2013a}
 
 Sec.~\ref{sec:ip-intro} was newly written for this thesis,
 except Sec.~\ref{sec:imprecisebayes}, which is based on \textcite[\S 4.2]{itip-statinf},
-and Section~\ref{sec:updating}, which is based on parts of \textcite[\S 4.4]{itip-statinf},
-where the latter was mainly written by Thomas Augustin.
+and Section~\ref{sec:updating}, which is based on parts of \textcite[\S 4.4]{itip-statinf}.
+%where the latter was mainly written by Thomas Augustin.
 
-Also Sec.~\ref{sec:motivation} was devised especially for the thesis,
-under use of \textcite[\S 2.3]{itip-statinf} for the last paragraph in
-Sec.~\ref{sec:motivation:bayesian-foundational},
+Sec.~\ref{sec:motivation} was devised for this thesis,
+under use of \textcite[\S 2.3]{itip-statinf}
+for the last paragraph in Sec.~\ref{sec:motivation:bayesian-foundational},
 and Sections~\ref{sec:motivation:near-ignorance} and \ref{sec:motivation:pdc}.
 
 Section~\ref{sec:ip-alternatives} uses parts of \textcite[\S 2.2, 2.4]{itip-statinf},
 and a paragraph from \textcite[\S 7]{itip-statinf}.
 
-Section~\ref{sec:generalmodel} consists of \textcite[\S 4.3]{itip-statinf},
-which was written primarily by Gero Walter.****
+Section~\ref{sec:generalmodel} consists of \textcite[\S 4.3]{itip-statinf}.
+%which was written primarily by Gero Walter.****
 
-***Section~\ref{sec:jstp} is a slightly abriged reproduction of \textcite{Walter2009a},
+Section~\ref{sec:jstp} is a slightly abriged reproduction of \textcite{Walter2009a},
 with a minor change of notation towards the one introduced in Section~\ref{sec:regularconjugates}
 (most importantly, writing $\nn$ and $\yn$ for the canonical posterior parameters
 instead of $n^{(1)}$ and $y^{(1)}$, respectively).
-This paper was the result of a collaborative work, where both authors contributed
-more or less in equal parts. While Gero Walter contributed central concepts and basic ideas,
-along with the theoretical results, Thomas Augustin devised most of the structure,
-and contributed most of the introductory and concluding sections.***
+%This paper was the result of a collaborative work, where both authors contributed
+%more or less in equal parts. While Gero Walter contributed central concepts and basic ideas,
+%along with the theoretical results, Thomas Augustin devised most of the structure,
+%and contributed most of the introductory and concluding sections.***
 
 ***Section~\ref{sec:luck} gives a short overview on a software implementation
 of the model presented in Section~\ref{sec:jstp}.
@@ -70,25 +74,25 @@ Author and maintainer of this add-on package ***citation*** is Gero Walter,
 with Norbert Krautenbacher as a second author, who contributed code for an application
 to exponentially distributed data.
 
-***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a},
+Section~\ref{sec:isipta11} consists of \textcite{Walter2011a},
 again with a slight change of notation for consistency with the rest of the material presented in this thesis.
 Specifically, the success probability in Bernoulli trials is denoted by $\theta$ instead of $p$.
-All three authors worked collaboratively on the work as whole but with emphasis on different parts.
-Section~\ref{sec:ibbm} was devised and written primarily by Gero Walter,
-while Section~\ref{sec:weightedinf} was devised and written primarily by Frank Coolen.
+%All three authors worked collaboratively on the work as whole but with emphasis on different parts.
+%Section~\ref{sec:ibbm} was devised and written primarily by Gero Walter,
+%while Section~\ref{sec:weightedinf} was devised and written primarily by Frank Coolen.
 Here, it was possible to add a few explanatory paragraphs
 that could not appear in the original publication due to page restrictions. 
-Thomas Augustin contributed substantially to all parts of the manuscript,
-especially in the introductory and concluding sections.***
+%Thomas Augustin contributed substantially to all parts of the manuscript,
+%especially in the introductory and concluding sections.***
 
-***Section~\ref{sec:festschrift} consists of \textcite{Walter2009b},
+Section~\ref{sec:festschrift} consists of \textcite{Walter2009b},
 which is a substantially extended version of \textcite{Walter2010a},
 reproduced here with a slight change in notation and some added comments.
-In this work, the result of a collaborative effort, Gero Walter contributed 
-the description of the examples in Section~\ref{sec:iid},
-and the computations and most of the write-up in Sections~\ref{sec:scp} and \ref{sec:cccp}.
-Sections~\ref{sec:festschrift-intro} and \ref{sec:discussion-festschrift} were a joined effort
-of Gero Walter and Thomas Augustin.
+%In this work, the result of a collaborative effort, Gero Walter contributed 
+%the description of the examples in Section~\ref{sec:iid},
+%and the computations and most of the write-up in Sections~\ref{sec:scp} and \ref{sec:cccp}.
+%Sections~\ref{sec:festschrift-intro} and \ref{sec:discussion-festschrift} were a joined effort
+%of Gero Walter and Thomas Augustin.
 
 
 \section{Notation}
@@ -180,7 +184,7 @@ In this setting $\mathcal{Q}$ is called \emph{sampling model} and every element 
 The inferential task is to learn the true element $\p^* \in \mathcal{Q}$ from multiple observations of the random process producing $X$.
 
 
-\subsection{Parametric Models}
+\section{Parametric Models}
 \label{sec:parametricmodels}
 
 In this thesis, generally, so-called \emph{parameteric models} are considered,
@@ -189,7 +193,7 @@ assuming values in the so-called \emph{parameter space} $\Theta$, $\Theta \subse
 i.e.\ ${\cal Q}=\left(\p_\vartheta\right)_{\vartheta \in \Theta}$.
 Here, the different sampling distributions $\p_\vartheta$ are implicitly understood as belonging to a specific class of distributions,
 the basic type of which is assumed to be known completely
-(e.g., normal distributions, as in Section~\ref{sec:normaldist} below),
+(e.g., normal distributions, see Example~\ref{ex:normaldist} below), %as in Section~\ref{sec:normaldist} below),
 and only some characteristics $\vartheta$ (e.g., the mean) of the distributions are unknown.
 
 Throughout, we will assume (as is the case for all common applications)
@@ -221,12 +225,15 @@ The term \emph{sample} is then also used for the concretely observed value(s) $\
 
 \medskip
 
-In Sections~\ref{sec:normaldist} and \ref{sec:multinomdist},
+%***In Sections~\ref{sec:normaldist} and \ref{sec:multinomdist},
+Now
 we will present two examples for basic parametric models that will be repeatedly discussed further on.
 
 
-\subsection{The Normal Distribution}
-\label{sec:normaldist}
+%\subsection{***The Normal Distribution}
+%\label{sec:normaldist}
+\begin{example}[Normal distribution]
+\label{ex:normaldist}
 
 A common model for observations that in principle can assume any value on the real line
 is the \emph{normal distribution} with parameters $\mu$ and $\sigma^2$, also called the \emph{Gaussian distribution}.
@@ -252,13 +259,17 @@ f_{(\mu, \sigma^2)}(\x)
  &= \prod_{i=1}^n f_{(\mu, \sigma^2)}(x_{i})
   = (2\pi\sigma^2)^{-\frac{n}{2}}\exp\Big\{ -\frac{1}{2\sigma^2}\sum_{i=1}^n (x_{i} - \mu)^2 \Big\}\,.
 \end{align}
+Later on, we restrict considerations to the case where the variance is known to be equal to $\sigma_0^2$,
+denoted by $x_i \sim \norm(\mu, \sigma_0^2)$.
+Inference may thus concern the parameter $\mu$ directly,
+or future observations $x_{n+1}, x_{n+2}, \ldots$ in a chain of i.i.d.\ observations.
+\end{example}
 
-Later on, we restrict considerations to the case where the variance $\sigma_0^2$ is known, denoted by $x_i \sim \norm(\mu, \sigma_0^2)$.
-Inference may thus concern the parameter $\mu$ directly, or future observations $x_{n+1}, x_{n+2}, \ldots$ in a chain of i.i.d.\ observations.
 
-
-\subsection{The Multinomial Distribution}
-\label{sec:multinomdist}
+%\subsection{***The Multinomial Distribution}
+%\label{sec:multinomdist}
+\begin{example}[Multinomial distribution]
+\label{ex:multinomdist}
 
 The \emph{multinomial distribution} is a common model for samples where only a limited number of distinct values can be observed.
 %like in the data from an election poll, or from a pharmacological study asking about a certain set of adverse reactions.
@@ -298,6 +309,7 @@ f_{\btheta}(\vec{n}) &= \binom{n}{n_1,\ldots,n_k} \prod_{j=1}^k \theta_j^{n_j}
 %               \propto \prod_{j=1}^k \theta_j^{n_j}\,.
 \end{align}
 As a shortcut, we write $\vec{n} \sim \mult(\btheta)$.
+\end{example}
 
 
 \section{Statistical Inference with the Bayesian Paradigm}
@@ -354,7 +366,9 @@ namely in the case where the sample distribution belongs to a so-called \emph{(r
 This indeed covers many sample distributions relevant in a statistician's everyday life,
 like Normal and Multinomial models, Poisson models, or Exponential and Gamma models.
 After presentation of the general framework, we will discuss its instantiation for the Normal
-and the Multinomial sampling models as introduced in Sections~\ref{sec:normaldist} and \ref{sec:multinomdist} above.
+and the Multinomial sampling models as introduced
+in Examples~\ref{ex:normaldist} and \ref{ex:multinomdist} above.
+%in Sections~\ref{sec:normaldist} and \ref{sec:multinomdist} above.
 
 A sample distribution
 (from now on understood directly as the distribution $\p_\vartheta^{\otimes n}$ of an i.i.d.\ sample $\x$ of size $n$)
@@ -490,7 +504,10 @@ where loss functions typical for statistical settings are described in \S 2.5, p
 
 The concretion of the framework for Bayesian inference with canonical conjugate priors
 as presented in Section~\ref{sec:regularconjugates}
-is now demonstrated for the sampling models discussed in Sections~\ref{sec:normaldist} and \ref{sec:multinomdist}.
+is now demonstrated for the sampling models 
+discussed in Examples~\ref{ex:normaldist} and \ref{ex:multinomdist}.
+%is now demonstrated for the Normal and Multinomial sampling models.
+%discussed in Sections~\ref{sec:normaldist} and \ref{sec:multinomdist}.
 As a first simple example, we will consider inference in the Binomial model,
 being the special case of the Multinomial model with only two categories.
 Then, we will briefly turn to the Normal model,
@@ -755,16 +772,16 @@ and also the transformation to $p(\btheta\mid\nz, \yz)$,
 in more detail here.
 
 We will use the formulation of $\mult(\btheta)$ as the multivariate Bernoulli distribution
-like in Section~\ref{sec:multinomdist}.
+like in Example~\ref{ex:multinomdist}. %Section~\ref{sec:multinomdist}.
 The distribution of a single multivariate Bernoulli observation is equivalent to a Multinomial distribution with sample size $1$,
 and i.i.d.\ repetitions of a multivariate Bernoulli distribution lead to the Multinomial distribution.
 Since i.i.d.\ repetitions do not interfere with conjugacy
 (as mentioned in Footnote~\ref{foot:dataisplural}, page~\pageref{foot:dataisplural}.),
 we may construct the canonical conjugate prior by considering a single multivariate Bernoulli observation.
 
-To do without side conditions like $\sum_{j=1}^k \theta_j = 1$ as needed in Section~\ref{sec:multinomdist},
+To do without side conditions like $\sum_{j=1}^k \theta_j = 1$ as needed in Example~\ref{ex:multinomdist}, %Section~\ref{sec:multinomdist},
 we will define here as a single multivariate Bernoulli observation distinguishing $k+1$ categories $j = 0,1,\ldots,k$
-(instead of $k$ categories $j = 1,\ldots,k$ as in Section~\ref{sec:multinomdist})
+(instead of $k$ categories $j = 1,\ldots,k$ as in Example~\ref{ex:multinomdist}) %Section~\ref{sec:multinomdist})
 a vector $\x$ with $k$ components indexed $1,\ldots,k$
 such that
 \begin{align*}
@@ -873,7 +890,7 @@ The Dirichlet distribution can be seen as a direct generalisation of the Beta di
 and we will speak of the \emph{Dirichlet-Multinomial model}
 as the analogue to the Beta-Binomial model from Section~\ref{sec:beta-binom}.
 
-Returning to the notation from Section~\ref{sec:multinomdist},
+Returning to the notation from Example~\ref{ex:multinomdist}, %Section~\ref{sec:multinomdist},
 where $k$ categories $j=1,\ldots,k$ are considered, 
 we have thus
 \begin{align}
@@ -1126,7 +1143,8 @@ and the Gamma-Poisson model for $q_t$ to make inferences on $\vec{q}$ is discuss
 Suppose that we have observed a sequence of $n$ failure events,
 where we have counted the number of components involved with each failure event,
 say $n_j$ of the $n$ observed failure events involved \emph{exactly} $j$ failed components.
-As in Section~\ref{sec:multinomdist}, we write $\vec{n}$ for $(n_1,\dots,n_k)$.
+As in Example~\ref{ex:multinomdist}, %Section~\ref{sec:multinomdist},
+we write $\vec{n}$ for $(n_1,\dots,n_k)$.
 With the alpha-factors taking the role of the parameter $\btheta$ in \eqref{eq:multinomdens},
 the multinomial sample model for $\vec{n}$ has the form
 \begin{equation*}
