--- a/isipta11.tex
+++ b/isipta11.tex
@@ -6,7 +6,7 @@ This section reproduces the work
 published as a peer-reviewed contribution to
 \emph{ISIPTA'11: Proceedings of the Seventh International Symposium on
 Imprecise Probabilities: Theories and Applications} \parencite{Walter2011a}.
-As such, it is reproduced here verbatim,
+As such, it is reproduced here almost verbatim,
 except for some minor shortenings, especially in the Introduction (Section~\ref{sec:isipta11-intro}),
 and the addition of some comments and footnotes linking this work to other parts of this thesis.
 Furthermore, the notation was changed slightly to assure consistency with the rest of the material presented in this thesis.
@@ -1196,8 +1196,5 @@ field for research and discussions.
 The authors thank the referees for very helpful comments.
 
 
-
-
-\section{***boatshape stuff in outlook?***}
 
 
