--- a/jstp.tex
+++ b/jstp.tex
@@ -9,7 +9,7 @@ This section reproduces the work
 published as a peer-reviewed article in the \emph{Journal of Statistical Theory and Practice},
 and reprinted as a book chapter in \emph{Imprecision in Statistical Theory and Practice}
 \parencite{Walter2009a}.
-As such, it is reproduced here verbatim,
+As such, it is reproduced here almost verbatim,
 except for some minor shortenings, especially in the Introduction (Section~\ref{sec:jstp-intro}),
 and the addition of some comments and footnotes linking this work to other parts of this thesis.
 Furthermore, the notation was changed slightly towards the one introduced in Section~\ref{sec:regularconjugates}
