--- a/concluding.tex
+++ b/concluding.tex
@@ -89,6 +89,8 @@ parameters, as developed in the Neyman-Pearson setting by
 \textcite[\S~5]{2002:augustin}.
 \end{small}
 
+***new weakly informative prior models / prior near-ignorance models by Mangili \& Benavoli (ISIPTA'13)
+
 
 ***boatshape stuff: cater also for strong prior-data agreement***
 
