diss: frontmatter changed, 'contents' in 'contents' for better pdf browsing

--- a/diss.tex
+++ b/diss.tex
@@ -26,24 +26,27 @@
 
 
   \LMUTitle
-      {Generalized Bayesian Inference under Prior-Data Conflict}         % Titel der Arbeit
-      {Gero Walter     }                       % Vor- und Nachname des Autors
+      {Generalized Bayesian Inference\\ under Prior-Data Conflict}         % Titel der Arbeit
+      {Gero Walter}                            % Vor- und Nachname des Autors
       {T\"ubingen}                             % Geburtsort des Autors
       {Fakult\"at f\"ur Mathematik, Informatik und Statistik} % Name der Fakultaet
       {M\"unchen 2013}                         % Ort und Jahr der Erstellung
-      {***Abgabedatum***}                            % Tag der Abgabe
+      {14.08.~2013}                              % Tag der Abgabe
       {Prof.\ Dr.\ Thomas Augustin}            % Name des Erstgutachters
       {Prof.\ Dr.\ Frank P.A.\ Coolen}         % Name des Zweitgutachters
-      {***Pr\"ufungsdatum***}                  % Datum der muendlichen Pruefung
+      {}                                       % Datum der muendlichen Pruefung
 
 
+  \addcontentsline{toc}{chapter}{\protect Contents}
   \tableofcontents
   \markboth{Contents}{Contents}
 
   \listoffigures
+  \addcontentsline{toc}{chapter}{\protect List of Figures}
   \markboth{List of Figures}{List of Figures}
 
   \listoftables
+  \addcontentsline{toc}{chapter}{\protect List of Tables}
   \markboth{List of Tables}{List of Tables}
   \cleardoublepage
 
