--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -653,7 +653,7 @@ Only if $m(\emptyset) > 0$, which does not seem a reasonable choice in our view 
 the set of corresponding distributions $\mathcal{M}$ is empty.***
 
 ***note on IP can be frequentist / non-Bayesian (similarities to Weichselberger?),
-see \ref[\S 5]{itip-statinf}***
+see \parencite[\S 5]{itip-statinf}***
 
 ***short description of NPI here? as \emph{inference} approach!
 
