--- a/head.tex
+++ b/head.tex
@@ -76,6 +76,15 @@
     \vspace*{\stretch{1}}
   \end{flushright}
   \rule{\linewidth}{.7ex}
+  \begin{flushright}
+    \sffamily\bfseries
+    Dissertation an der Fakult\"at f\"ur Mathematik, Informatik und Statistik\\
+    \sffamily\bfseries
+    der Ludwig-Maximilians-Universit\"at M\"unchen\\
+    \sffamily\bfseries
+    vorgelegt am #6
+  \end{flushright}    
+  \rule{\linewidth}{.7ex}
   \vspace*{\stretch{5}}
   \begin{center}
     \includegraphics[width=2in]{siegel}
@@ -107,12 +116,11 @@
   \begin{center}
     \Large Dissertation\\
     \Large an der #4\\
-    \Large der Ludwig-Maximilians-Universit\"at\\
-    \Large M\"unchen\\
+    \Large der Ludwig-Maximilians-Universit\"at M\"unchen\\
     \vspace*{\stretch{1}}
     \Large vorgelegt von\\
     \Large #2\\
-    \Large geboren am 26.06.1979 in #3\\
+    \Large geboren am 26.06.~1979 in #3\\
     \vspace*{\stretch{2}}
     \Large M\"unchen, den #6
   \end{center}
@@ -125,7 +133,7 @@
   \begin{flushleft}
     \large Erstgutachter:  #7 \\[1mm]
     \large Zweitgutachter: #8 \\[1mm]
-    \large Tag der m\"undlichen Pr\"ufung: #9\\
+    \large Tag der Disputation: #9\\ %m\"undlichen Pr\"ufung: #9\\
   \end{flushleft}
   \selectlanguage{english}
 
