--- a/summary.tex
+++ b/summary.tex
@@ -1,6 +1,5 @@
-\addcontentsline{toc}{chapter}{\protect Summary}
-
-\chapter*{Summary}
+\chapter*{Abstract}
+\addcontentsline{toc}{chapter}{\protect Abstract}
 
 This thesis is concerned with the generalisation of Bayesian inference towards the use of imprecise or interval probability,
 with a focus on model behaviour in case of prior-data conflict.
@@ -8,7 +7,7 @@ with a focus on model behaviour in case of prior-data conflict.
 Bayesian inference is one of the main approaches to statistical inference.
 It requires to express (subjective) knowledge on the parameter(s) of interest not incorporated in the data by a so-called prior distribution.
 All inferences are then based on the so-called posterior distribution,
-the synthesis*** of prior knowledge and the information in the data calculated via Bayes' Rule.
+the subsumption of prior knowledge and the information in the data calculated via Bayes' Rule.
 
 The adequate choice of priors has always been an intensive matter of debate in the Bayesian literature.
 While a considerable part of the literature is concerned with so-called non-informative priors
@@ -49,4 +48,4 @@ Models are developed that offer enough flexibility to express a wide range of (p
 give reasonably cautious inferences in case of prior-data conflict while resulting in more precise inferences when prior and data agree well,
 and still remain easily tractable in order to be useful for statistical practice.
 Applications in various areas, e.g.\ common-cause failure modeling and Bayesian linear regression, are explored,
-and the developed approach is compared to other imprecise/interval probability models.
+and the developed approach is compared to other imprecise probability models.
