--- a/versicherung.tex
+++ b/versicherung.tex
@@ -5,7 +5,7 @@
 \chapter*{Eidesstattliche Versicherung}
 
 Hiermit erkläre ich an Eides statt, dass diese Dissertation von mir
-selbstständig und ohne unerlaubte Beihilfe angefertigt ist.\\[3ex]
+selbstständig, unerlaubte Beihilfe angefertigt ist.\\[3ex]
 
 München, den ***Abgabedatum***\\[2ex]
 \hspace*{0.5\textwidth} {\small Gero Walter}
