--- a/zusammenfassung.tex
+++ b/zusammenfassung.tex
@@ -1,10 +1,8 @@
-\addcontentsline{toc}{chapter}{\protect Zusammenfassung}
-
-
 \selectlanguage{ngerman}
 \chapter*{Zusammenfassung}
+\addcontentsline{toc}{chapter}{\protect Zusammenfassung}
 
-Hier steht eine maximal einseitige Zusammenfassung der
+***Hier steht eine maximal einseitige Zusammenfassung der
 Dissertation.
 
 Dies ist ein neuer Absatz.
