diss: appendix structure at intro of concluding

--- a/appendix1.tex
+++ b/appendix1.tex
@@ -1,5 +1,5 @@
 \chapter{Appendix}
-%\label{cha:festschrift}
+\label{cha:appendix}
 
 
 \section{Bayesian Linear Regression: Different Conjugate Models and Their (In)Sensi\-ti\-vi\-ty to Prior-Data Conflict}
@@ -1275,15 +1275,5 @@ Finally, $n\uz$ has to be varied along the lines of Walter \& Augustin (2009, Se
 The authors are very grateful to Erik Quaeghebeur and Frank Coolen for intensive discussions on foundations of generalised Bayesian
 inference, and to Thomas Kneib for help at several stages of writing this paper.
 
-
-\section{***Linear Regression Analysis under Sets of Conjugate Priors}
-
-***short summary of ISIPTA'07 paper??***
-
-
-\section{***boatshape stuff***}
-
-
-march 2013 notes (technical results)
 
 
