--- a/concluding.tex
+++ b/concluding.tex
@@ -1,8 +1,25 @@
 \chapter{Concluding Remarks}
 \label{cha:concluding}
 
+We will conclude this thesis with a short summary and discussion of the central achievments in Section~\ref{sec:concluding-summary}.
+In Section~\ref{sec:concluding-outlook}, we will sketch some opportunities for applications and avenues for further research.
 
-\section{***Summary / Discussion***}
+As supplemental material, the Appendix (Chapter~\ref{cha:appendix}) contains
+\begin{enumerate}[(i)]
+\item a study of \pdc\ sensitivity in Bayesian linear regression,
+presenting a simplified prior model that gives interesting insights into the updating step
+for the regression parameters and offers opportunities for inferences based on sets of priors
+(Section~\ref{sec:festschrift});
+\item a short summary of a previous approach to Bayesian linear regression
+with sets of priors, published as \parencite{Walter2007a}, in Section~\ref{}
+\item some first technical results characterising a new prior parameter set shape $\PZ$,
+described informally in Section~\ref{sec:concluding-outlook} below
+(Section~\ref{sec:boatshape}).
+\end{enumerate}
+
+
+\section{Summary and Discussion***}
+\label{sec:concluding-summary}
 
 reasons to use IP models:
 
@@ -56,7 +73,8 @@ also with hierarchical models (Section~\ref{sec:hierarchical})?***
 
 
 
-\section{***Outlook***}
+\section{Outlook***}
+\label{sec:concluding-outlook}
 
 ***avenues for further research***
 
